# monitoring-biodiversity-activities-with-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: preprocessing.py
