[project]
name = "mba_llm"
description = "Monitoring Biodiversity Activities with Large Language Models"
version = "0"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "C", "I", "N", "Q"]
fixable = ["ALL"]
